--- a/Primeira modelagem-subset.ipynb
+++ b/Primeira modelagem-subset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "train = fetch_20newsgroups(subset='train', remove=('headers', 'footers', 'quotes'))\n",
-    "test = fetch_20newsgroups(subset='test', remove=('headers', 'footers', 'quotes'))"
+    "#categories = ['alt.atheism', 'talk.religion.misc','comp.graphics', 'sci.space']\n",
+    "categories = [ 'talk.religion.misc','comp.graphics', 'sci.space', 'talk.politics.misc', \n",
+    "              'sci.med', 'rec.autos', 'comp.os.ms-windows.misc', 'rec.sport.baseball']\n",
+    "train = fetch_20newsgroups(subset='train', remove=('headers', 'footers', 'quotes'), categories=categories)\n",
+    "test = fetch_20newsgroups(subset='test', remove=('headers', 'footers', 'quotes'), categories=categories)"
    ]
   },
   {
@@ -31,35 +33,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['alt.atheism',\n",
-       " 'comp.graphics',\n",
+       "['comp.graphics',\n",
        " 'comp.os.ms-windows.misc',\n",
-       " 'comp.sys.ibm.pc.hardware',\n",
-       " 'comp.sys.mac.hardware',\n",
-       " 'comp.windows.x',\n",
-       " 'misc.forsale',\n",
        " 'rec.autos',\n",
-       " 'rec.motorcycles',\n",
        " 'rec.sport.baseball',\n",
-       " 'rec.sport.hockey',\n",
-       " 'sci.crypt',\n",
-       " 'sci.electronics',\n",
        " 'sci.med',\n",
        " 'sci.space',\n",
-       " 'soc.religion.christian',\n",
-       " 'talk.politics.guns',\n",
-       " 'talk.politics.mideast',\n",
        " 'talk.politics.misc',\n",
        " 'talk.religion.misc']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,27 +60,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0        False\n",
-       "1        False\n",
-       "2        False\n",
-       "3        False\n",
-       "4        False\n",
-       "         ...  \n",
-       "11309    False\n",
-       "11310    False\n",
-       "11311    False\n",
-       "11312    False\n",
-       "11313    False\n",
-       "Name: 0, Length: 11314, dtype: bool"
+       "0       False\n",
+       "1       False\n",
+       "2       False\n",
+       "3       False\n",
+       "4       False\n",
+       "        ...  \n",
+       "4390    False\n",
+       "4391     True\n",
+       "4392    False\n",
+       "4393    False\n",
+       "4394     True\n",
+       "Name: 0, Length: 4395, dtype: bool"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,35 +92,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{0: 'alt.atheism',\n",
-       " 1: 'comp.graphics',\n",
-       " 2: 'comp.os.ms-windows.misc',\n",
-       " 3: 'comp.sys.ibm.pc.hardware',\n",
-       " 4: 'comp.sys.mac.hardware',\n",
-       " 5: 'comp.windows.x',\n",
-       " 6: 'misc.forsale',\n",
-       " 7: 'rec.autos',\n",
-       " 8: 'rec.motorcycles',\n",
-       " 9: 'rec.sport.baseball',\n",
-       " 10: 'rec.sport.hockey',\n",
-       " 11: 'sci.crypt',\n",
-       " 12: 'sci.electronics',\n",
-       " 13: 'sci.med',\n",
-       " 14: 'sci.space',\n",
-       " 15: 'soc.religion.christian',\n",
-       " 16: 'talk.politics.guns',\n",
-       " 17: 'talk.politics.mideast',\n",
-       " 18: 'talk.politics.misc',\n",
-       " 19: 'talk.religion.misc'}"
+       "{0: 'comp.graphics',\n",
+       " 1: 'comp.os.ms-windows.misc',\n",
+       " 2: 'rec.autos',\n",
+       " 3: 'rec.sport.baseball',\n",
+       " 4: 'sci.med',\n",
+       " 5: 'sci.space',\n",
+       " 6: 'talk.politics.misc',\n",
+       " 7: 'talk.religion.misc'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,16 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(11314, 101631)"
+       "(4395, 66960)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,16 +151,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11314"
+       "4395"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,17 +171,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<1x101631 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 64 stored elements in Compressed Sparse Row format>"
+       "<1x66960 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 87 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,16 +192,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'I was wondering if anyone out there could enlighten me on this car I saw\\nthe other day. It was a 2-door sports car, looked to be from the late 60s/\\nearly 70s. It was called a Bricklin. The doors were really small. In addition,\\nthe front bumper was separate from the rest of the body. This is \\nall I know. If anyone can tellme a model name, engine specs, years\\nof production, where this car is made, history, or whatever info you\\nhave on this funky looking car, please e-mail.'"
+       "'\\nWhere were you brought up?  In the former USSR?  Is Innocent until proven  \\nguilty by a jury of your peers, NOT Dan Rather, dead in this country?  Seems  \\nso.  Is tax evasion, the only charge brought against the BDs, punishable by  \\ndeath in this country, now?\\n\\n\\nNot really.  You are a blind idiot.\\n\\n\\n\"Not sure\", yet you condem them to death for it?  If the BATF had stayed home,  \\nall would be alive, now.  So who murdered who?\\nYou have a short memory.\\n\\nnext.\\n\\nSleep well, tonite, heartless idiot.  Sleep the sleep of the simple-minded.\\n\\nI shall weep for my country, myself.\\n\\n\\nI\\'m short of patience tonite, but rabid dogs deserve and get better treatment  \\nthan the BDs got.\\n\\nJim\\n--\\njmd@handheld.com'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +221,7 @@
        "7"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,16 +232,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'rec.autos'"
+       "'talk.religion.misc'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,16 +252,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\n\\n\\n\\n\\nOf course.  The term must be rigidly defined in any bill.\\n\\n\\nI doubt she uses this term for that.  You are using a quote allegedly\\nfrom her, can you back it up?\\n\\n\\n\\n\\nI read the article as presenting first an argument about weapons of mass\\ndestruction (as commonly understood) and then switching to other topics.\\nThe first point evidently was to show that not all weapons should be\\nallowed, and then the later analysis was, given this understanding, to\\nconsider another class.\\n\\n\\n\\n'"
+       "\"My comments about the Feingold Diet have no relevance to your\\ndaughter's purported FrostedFlakes-related seizures.  I can't imagine\\nwhy you included it.\\n\""
       ]
      },
-     "execution_count": 13,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +288,7 @@
        "SVC()"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,16 +304,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.644061323734714"
+       "0.7311447514680061"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,16 +334,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.682861129525057"
+       "0.7869255262555797"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,16 +367,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3939245937724446"
+       "0.5046598061765181"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,16 +399,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6585894332744863"
+       "0.7520120141732767"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
